Adding .vivive data

--- a/.vivie.conf
+++ b/.vivie.conf
@@ -7,6 +7,6 @@ projectname = riddemos
 trackbydefault = false
 
 [TrackingConfig]
-include = *.py,*.md,*.txt,*.jsx,README.md
+include = *.py,*.md,*.txt,*.jsx,README.md,*.c,*.asm
 exclude = *node_modules*,.vivie/,*.swp,.git/
 
